# MyAI

./: .env  .gitignore  pyproject.toml
app/: main.py
app/infrastructure/logging/: logging.py
app/interfaces/endpoints/: routes.py  status_routes.py
core/: config.py
